<resources>
    <string name="app_name">NYC Museums</string>
    <string name="title">Museums Tickets</string>
    <string name="sideTitle">Ticket Price Calculator</string>
    <string name="imageDescription">image of the current museum</string>
    <string name="priceDetail">Price Detail</string>
    <string name="ticketPrice">Ticket Price</string>
    <string name="tax">Tax (NYC Tax Rate: 8.875%)</string>
    <string name="total">Total</string>
    <string name="initial">$0.00</string>
    <string name="dollar">$</string>
</resources>