<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SideActivity"
        >

    <TextView
        android:id="@+id/museum"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/titleColor"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="233dp"
        android:layout_height="206dp"
        android:contentDescription="@string/imageDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/museum"
        app:layout_constraintVertical_bias="0.025"
        tools:srcCompat="@tools:sample/avatars" />

    <LinearLayout
        android:id="@+id/priceLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image"
        app:layout_constraintVertical_bias="0.046" />

    <TextView
        android:id="@+id/tax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/ticketPrice"
        android:paddingTop="10sp"
        android:text="@string/tax"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/taxPrice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ticketPrice"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/priceDetail"
        android:layout_width="237dp"
        android:layout_height="21dp"
        android:alpha="0.7"
        android:text="@string/priceDetail"
        android:textColor="#6200ee"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priceLayout"
        app:layout_constraintVertical_bias="0.027" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/ticketPrice"
        android:paddingTop="10sp"
        android:text="@string/ticketPrice"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/ticketPrice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.296"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/ticketPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/ticketPrice"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/ticketPrice"
        android:inputType="text"
        android:labelFor="@id/price"
        android:text="@string/initial"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priceDetail"
        app:layout_constraintVertical_bias="0.115" />

    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/total"
        android:paddingTop="10sp"
        android:text="@string/total"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/totalPrice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.268"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taxPrice"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/totalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/total"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/total"
        android:inputType="text"
        android:text="@string/initial"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taxPrice"
        app:layout_constraintVertical_bias="0.33" />

    <EditText
        android:id="@+id/taxPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/ticketPrice"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/ticketPrice"
        android:inputType="text"
        android:labelFor="@id/price"
        android:text="@string/initial"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ticketPrice"
        app:layout_constraintVertical_bias="0.192" />

</androidx.constraintlayout.widget.ConstraintLayout>